# GBQ

./: CMakeLists.txt  OPTUtils.h  QMKP_01qpCPX2.cpp  QMKP_01qpCPX2.h  Solution.cpp  Solution.h  localsearch.cpp  localsearch.h  main.cpp  qkp_grdy.cpp  qkp_grdy.h  quadknap.c  utils.cpp  utils.h
cmake/: FindCPLEX.cmake  FindGUROBI.cmake
jeu_instances/: jeu_200_25_3.txt
